283 ==> 424805 - digiKam crashes when opening preview of items from a specific album.
284 ==> 431775 - Compiling with ccache issue.
285 ==> 432074 - digiKam's appimage failed to launch on ArchLinux.
286 ==> 432312 - Detect Faces crashes when .xcf file encountered.
287 ==> 432428 - Quick search by image name in current album.
288 ==> 432522 - digiKam 7.2.0-b2 on macOS 11 with remote mysql - failed to update DB schema.
289 ==> 432494 - Advanced search album does not search subfolders nothing.
290 ==> 432568 - Provisional tags are not displayed until another change is made.
291 ==> 431354 - Inconsistent behavior when adding Tags/Keywords.
292 ==> 430922 - Crashes without notification.
293 ==> 431366 - Translation incomplete, conversion to DE not possible. Language selection is missing.
294 ==> 425404 - digikam crash when making a maintenance.
295 ==> 426733 - Renaming with tags in subtree fails.
296 ==> 428938 - Entire program closes unexpectedly.
297 ==> 430702 - Lost the UI while process is still working.
298 ==> 430921 - Cannot add Edit Metadata filter to toolbar DigiKam 7.1.0.
299 ==> 432480 - Crash when trying to Import from Google Photos.
300 ==> 339355 - for each access to a google service we must have a distinct authorization.
301 ==> 432619 - Batch Queue Manager does not use original album as target.
302 ==> 124788 - Allow to turn off Presentation tool delay [patch].
303 ==> 432646 - digiKam 7.2.0-rc crashes on startup (beta2 didn't).
304 ==> 432613 - Face detection scan all album, not only the selected ones.
305 ==> 432764 - Face detection (!) with few results.
306 ==> 431721 - The string "Filters" needs to be disambiguated between image/search context.
307 ==> 432823 - Metadata Panel does not display XMP structs instead displays type="Bag".
308 ==> 293335 - GPX file without time stamps reports no datapoints.
309 ==> 432531 - After running DB maintenance digiKam won't start can't connect to DB then crashes.
310 ==> 