@@ -347,4 +347,5 @@ BUGFIXES:
 307 ==> 432823 - Metadata Panel does not display XMP structs instead displays type="Bag".
 308 ==> 293335 - GPX file without time stamps reports no datapoints.
 309 ==> 432531 - After running DB maintenance digiKam won't start can't connect to DB then crashes.
-310 ==> 
+310 ==> 432878 - Rendering Intents options cannot be translated in Color Management Configuration page.
+311 ==> 
